--- a/Classifying_Iris_Species.ipynb
+++ b/Classifying_Iris_Species.ipynb
@@ -815,5 +815,5 @@
   ]
 }
 
-References:
-Andreas C, M., & Guido, S. (2016). Introduction to Machine Learning with Python: A Guide for Data Scientists. O’Reilly Media.
+"References:"
+"Andreas C, M., & Guido, S. (2016). Introduction to Machine Learning with Python: A Guide for Data Scientists. O’Reilly Media."
